[package]
name = "openstranded-plugin-api"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "OpenStranded Plugin SDK — Value, Service API, Registry, GameAPI"
repository = "https://github.com/openstranded/openstranded"
homepage = "https://github.com/openstranded/openstranded"
documentation = "https://docs.rs/openstranded-plugin-api"
readme = "README.md"
keywords = ["game", "stranded", "survival", "openstranded"]
categories = ["game-engines", "game-development"]
exclude = ["/.gitignore", "Cargo.lock"]

[package.metadata.docs.rs]
features = ["parse", "test-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"

# Optional: RON parser, used internally by the `parse` feature.
# Plugins never depend on `ron` directly.
ron = { version = "0.12", optional = true }

[features]
default = ["parse"]

# Built-in registry data parsing (parse_registry_data, parse_registry_list).
# Currently uses RON internally; may support JSON/binary in the future.
parse = ["ron"]

# Enables MockGameAPI and test utilities for plugin testing
test-utils = []
