[package]
name = "openstranded-plugin-api"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-or-later"
description = "OpenStranded Plugin SDK — re-exports wasmcontract types + MockGameAPI"
repository = "https://github.com/openstranded/plugin-api"
homepage = "https://github.com/openstranded/plugin-api"
documentation = "https://docs.rs/openstranded-plugin-api"
readme = "README.md"
keywords = ["game", "stranded", "survival", "openstranded"]
categories = ["game-engines", "game-development"]
exclude = ["/.gitignore", "Cargo.lock"]

[package.metadata.docs.rs]
features = ["test-utils"]

[dependencies]
openstranded-common-wasmcontract = "0.1"

[features]
default = []

# Enables MockGameAPI and test utilities for plugin testing
test-utils = []
